Added maven targets to generate installable package for MacOSX, Linux and Windows.